--- a/GalleryAppMvvm/app/src/main/AndroidManifest.xml
+++ b/GalleryAppMvvm/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.CategoryActivity"
+        <activity android:name=".view.activities.CategoryActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"/>
-        <activity android:name=".view.MainActivity"
+        <activity android:name=".view.activities.MainActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"
             >
             <intent-filter>
